--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	compile 'org.webjars:webjars-locator:0.30'
     compile 'org.webjars:bootstrap:4.0.0-2'
-
+	compile('org.springframework.boot:spring-boot-starter-aop')
 	//compile group: 'org.hibernate', name: 'hibernate-validator', version: '4.3.1.Final'
 	//compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
