--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	compile 'org.webjars:webjars-locator:0.30'
-    compile 'org.webjars:bootstrap:4.0.0-2'
+    implementation 'org.webjars:jquery:3.5.0'
+    implementation 'org.webjars:bootstrap:4.4.1-1'
 	compile('org.springframework.boot:spring-boot-starter-aop')
 	//compile group: 'org.hibernate', name: 'hibernate-validator', version: '4.3.1.Final'
 	//compile('org.springframework.boot:spring-boot-starter-data-jpa')
